@@ -24,3 +24,16 @@ class DownloadTest(unittest.TestCase):
         with self.assertRaises(ValueError) as exc:
             download.configure()
         self.assertEqual('No checksum given.', exc.exception.args[0])
+
+    def test_update_should_raise_AssertionError_on_checksum_mismatch(self):
+        from ..download import Download
+        download = Download('url', checksum='foobar:1234')
+        download.configure()
+        with mock.patch('batou.lib.download.Download.cmd'), \
+             mock.patch('batou.utils.hash') as buh,\
+             self.assertRaises(AssertionError) as err:
+            buh.return_value = '4321'
+            download.update()
+        self.assertEqual('Checksum mismatch!\nexpected: 1234\ngot: 4321',
+                         str(err.exception))
+
